--- a/gb/23/9/5/n14067095.md
+++ b/gb/23/9/5/n14067095.md
@@ -6,7 +6,7 @@
 <h6>安省没有限制留学生人数，导致留学生涌入，引起一系列问题。图为多伦多大学。（Shutterstock）
 </h6>
 <hr>
-<p>【大纪元2023年09月04日】（大纪元记者李平多伦多报导）2016年，<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%AE%89%E7%9C%81.md#1">安省</a>大专院校年学签签发量3.5万多个，如今超10万多个，而且数字还在逐年增长。全省24所公立院校中，至少7所职业主要提供1、2年专科课程的院校，2021至2022年学年在校注册<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E7%95%99%E5%AD%A6%E7%94%9F.md#1">留学生</a>人数超本地注册学生人数。</p>
+<p>【大纪元2023年09月04日】（大纪元记者李平多伦多报导）2016年，<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%AE%89%E7%9C%81.md#1">安省</a>大专院校年学签签发量3.5万多个，如今超10万多个，而且数字还在逐年增长。全省24所公立院校中，至少7所主要提供1、2年专科职业课程的院校，2021至2022年学年在校注册<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E7%95%99%E5%AD%A6%E7%94%9F.md#1">留学生</a>人数超本地注册学生人数。</p>
 <p>省府高校注册全日制学生统计数据显示，萨尼亚Lambton College学院、Timmins镇的Northern College学院、北湾Canadore College学院和Sault College等一些地方学院，<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E7%95%99%E5%AD%A6%E7%94%9F.md#1">留学生</a>占比分别高达82%、80%、72%和60%。萨德伯里和Belleville的Cambrian College学院和Loyalist College学院，留学生占比均过半。</p>
 <p>基奇纳的Conestoga College学院去年签发留学生签证超全国几乎任何一所学院，几乎与多伦多大学（UofT）和卑诗大学（UBC）相当。其中，有些学院留学生主要集中在众多卫星校园或与大多区的合作院校。</p>
 <h2>后果严重</h2>
@@ -18,54 +18,44 @@
 <h2>政府留学生政策失控</h2>
 <p>许多省，无论是自由党政府，还是保守党政府，都曾试图限制留学生数量，最近提出的一个政策是每所院校最多只能招收7,500名留学生。</p>
 <p>如今许多大专院校财政主要靠留学生学费支撑，限制留学生人数，无疑会给这些学院造成重大打击。专家指出，2018至2019年安省政府高校拨款全国所有省份中最少，加上联邦政府留学生签证发放无上限，省府也因此乐得不增加高校拨款，导致的结果就是高等院校无限制招收留学生。归根结底，是政府监管失控导致。</p>
-<p>20多年前，加拿大留学生不允许打工，理由是学生本职工作是学习。2000年仅2万留学生申报个税，至2019年这一数字翻了近10倍，而且还在逐年飙升。目前留学生每周合法打工工时是20小时。去年秋联邦自由党政府甚至提议将部分留学生全法打工时间提高到每周40小时。对于政府此举，雇主自然高兴，但专家担心，一下子增加大量低薪留学生临时外劳，工资更难涨上去。◇</p>
+<p>20多年前，加拿大留学生不允许打工，理由是学生本职工作是学习。2000年仅2万留学生申报个税，至2019年这一数字翻了近10倍，而且还在逐年飙升。目前留学生每周合法打工工时是20小时。去年秋联邦自由党政府甚至提议将部分留学生合法打工时间提高到每周40小时。对于政府此举，雇主自然高兴，但专家担心，一下子增加大量低薪留学生临时外劳，工资更难涨上去。◇</p>
 <p>责任编辑：文芳</p>
-
-<hr>
-
-
 <strong>相关新闻：</strong>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/10/n14051812.md#1">安省学院撤销录取通知书 数百名留学生陷困境</a></li>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/14/n14053939.md#1">加拿大租金七月升至历史新高</a></li>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/16/n14054712.md#1">留学生录取通知书被撤销 多伦多百年学院帮助</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/5/n14067083.md#1">多伦多动物园董事会给CEO加薪20%</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/5/n14067058.md#1">急诊室人满为患 多伦多病人等待病床48小时</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/5/n14067052.md#1">渥太华婚礼场地发生枪击事件 二人死六伤</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/5/n14067043.md#1">热浪袭击安省 野火烟雾影响多省空气质量</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/4/n14067054.md#1">安省学校秋季开学 不强制戴口罩</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/4/n14067048.md#1">绿带土地开发涉利益冲突 安省住房厅长辞职</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/4/n14067031.md#1">“安省人根本无法承受”：福特呼吁加拿大央行停止加息</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/30/n14106341.md#1">价格上涨 安省周三起转入冬季电费模式? ?</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/30/n14106285.md#1">列治文山新婚夫妇寻逃逸“女花童”爱犬</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/30/n14106304.md#1">贾平讲故事：人的道德飞速下滑</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/30/n14106286.md#1">邹至蕙和福特联手要求联邦解决财政困境</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/30/n14106235.md#1">安省女性乳腺癌筛查年龄降至40岁</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/30/n14106229.md#1">安省大学学费冻结 校方陷财务困境</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/29/n14105564.md#1">加拿大万锦市电影节 疑遭中共干涉</a></li>
 <hr>
-
-
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/ntdtv/blob/master/gb/2020/01/05/a102745738.md#1" target="_blank">响彻世界政坛的正义之声</a>  </li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/7/18/n10570999.md#1" target="_blank">凌晓辉：毒害人类灵魂的共产主义理论（中）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/27/n11282738.md#1" target="_blank">纽约11位国会议员褒奖法轮大法</a></li>
-<hr>
-
+<li><a href="https://github.com/19920513/djy/blob/master/gb/20/1/6/n11772347.md#1" target="_blank">一本“千古奇书” 结缘世界各族裔亿万人</a> </li><li><a href="https://github.com/19920513/djy/blob/master/gb/18/11/28/n10878489.md#1" target="_blank">共产暴政录：文革中教师校长被打死</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/19/7/8/n11370721.md#1" target="_blank">爱德华?斯考特: 对迫害善良的一个政治上的回应</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/27/n14061883.md#1">七月中元 为何民间称之为“鬼节”？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/30/n14064023.md#1">古埃及《托特预言》：创世主末后救世</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/1/n14065399.md#1">【未解之谜】命中注定爱上你？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/31/n14064392.md#1">研究5000例濒死体验 美国医生相信人有轮回</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/29/n14063481.md#1">日本礼法之形成与社会功能</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/2/n14065901.md#1">【环球直击】中国全民抓间谍《反间谍条例》上路</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/2/n14065900.md#1">【全球新闻】宝马“新世代”概念车全球首发</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/3/n14066309.md#1">【中国禁闻】广州设核辐射健康门诊 民讽骗钱</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/2/n14066034.md#1">网信办发文后 超千万粉丝网红“秀才”遭封杀</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/2/n14066022.md#1">三个因素解释为何美国经济超预期</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/2/n14065820.md#1">人民币大贬 央行维稳 专家：工具会钝化</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/1/n14065521.md#1">逃税传闻发酵 宋祖儿遭5大卫视官微删除内容</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/1/n14065575.md#1">“香港才子”蔡澜近况曝光 坐轮椅现身大马</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/3/n14066215.md#1">梁朝伟领威尼斯终身成就奖 泪谢李安与刘嘉玲</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/1/n14065549.md#1">《芭比》超《哈利波特》 票房破华纳百年纪录</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/2/n14065799.md#1">《自由之声》真人实事救被贩卖儿童 观众好评</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/18/n14056270.md#1">防便秘这样做都错了！医师破解5迷思 加1物就通便</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/28/n14062927.md#1">番薯及蕃薯叶护眼降血糖 一个禁忌要知道</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/23/n14059859.md#1">失眠易致失智肥胖 中医5方法改善 独创颈椎疗法</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/25/n14060964.md#1">脑中一部位过度活跃 导致温柔女子追杀老公</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/2/n14065711.md#1">加州空军基地周边农地 为何被秘密收购？</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/29/n14083880.md#1">皇帝小故事：梦见乘龙飞天 唐朝一帝为何自比乡贡进士？</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/25/n14102423.md#1">托斯卡纳温泉村出土青铜雕像：改写历史的新发现</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/23/n14101380.md#1">【未解之谜】朵洛莉丝催眠故事（3）跨越400年的视频？！</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/22/n14100508.md#1">唐玄宗射箭中飞鹤  见证道人化鹤功夫</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/26/n14103809.md#1">【未解之谜】朵洛莉丝催眠故事（4）人类至关重要的10年</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14105079.md#1">【环球直击】中共政治局开会讨论出阴招 只字不提李克强</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14105080.md#1">【中国禁闻】李克强悼念活动扩大 民借机表达积怨</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/30/n14105977.md#1">【全球新闻】李克强去世 中共团派终结</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104592.md#1">内斗激烈 传李克强猝死前被软禁在上海</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14104952.md#1">网传李克强灵车在上海曙光医院布置细节</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14104665.md#1">黑洞吞噬恒星数年后才吐出碎片 打破固有认知</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104522.md#1">胡杏儿婚后四年得三子 曝丈夫想要个女儿</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14105065.md#1">跳级考上泰国医学院 “盖儿”迎18岁成年礼</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104554.md#1">首位黑人动作演员理察朗崔罹癌病逝 享寿81岁</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104502.md#1">好莱坞停摆 道具业者2千坪仓库仅老板留守</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14104934.md#1">李善均为涉毒嫌疑四度鞠躬致歉 向家人道歉</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104552.md#1">防李克强猝死悲剧！心脏病突发按2穴位能救命</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14104690.md#1">新冠病毒入侵心脏动脉 6类长寿食物护心脏</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/19/n14098485.md#1">米是一味药！米中四宝补肾护肺肠胃好</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/20/n14077833.md#1">你的病痛 可能都是脊椎造成的</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14104643.md#1">【车评】5.6升引擎会否是绝响！？2023 Infiniti QX80 Sensory 4WD</a></li>
 <hr>
-
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/9/5/n14067095.htm">安省政策失控 留学生大量涌入</a></p><hr>
-
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/19920513/djy/blob/master/gb/23/9/5/n14067095.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
